--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "chart.js": "^4.4.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "react-chartjs-2": "^5.2.0"
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1"
   }
 }
