--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
