--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "client": "file:",
+    "cors": "^2.8.5",
     "framer-motion": "^11.11.9",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
