--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "client": "file:",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.11",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -21,6 +21,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
@@ -48,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14"
   }
 }
