--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,9 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "client": "file:",
-<<<<<<< HEAD
-    "cors": "^2.8.5",
-    "framer-motion": "^11.11.9",
-=======
     "framer-motion": "^11.11.11",
->>>>>>> b16aced23e07f78094a001fe639ad8c7d5517d64
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
