--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.0.2",
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "jsonwebtoken": "^9.0.2",
