--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "crypto": "^1.0.1",
+    "ip": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.7",
+    "qs": "^6.13.1",
     "react-chartjs-2": "^5.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
