--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.11.11",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
